--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -14,15 +14,15 @@
 <h2>week 5</h2>
 <p><strong><span style="color: #ff0000;">小組討論</span></strong></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
-<p>專題題目:</p>
+<p>專題題目:攪拌機</p>
 <p>第一位組員學號:40823237</p>
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:</p>
-<p>網頁編輯:</p>
-<p>程式模擬:</p><h2>week 6</h2>
+<p>繪製圖檔:40823250</p>
+<p>網頁編輯:40823237、40832244</p>
+<p>程式模擬:40823221、40823237</p><h2>week 6</h2>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
 </div><h1>小組影片</h1>
