--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,8 @@ img.add_border {
 <p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
 <div id="gtx-trans" style="position: absolute; left: -5px; top: 55.675px;">
 <div class="gtx-trans-icon"></div>
-</div><br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
+</div>
+<br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
         
     <!-- footer -->
       <div class="container">
