--- a/content/week 6.html
+++ b/content/week 6.html
@@ -137,7 +137,8 @@ img.add_border {
     <div id="tipue_search_content">week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 6</h1>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
-</div><br />week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+</div>
+<br />week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
