--- a/content/week 6.html
+++ b/content/week 6.html
@@ -135,9 +135,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 6</h1>
+<p><span><strong>小組分工</strong></span></p>
+<p>繪製圖檔:40823250</p>
+<p>網頁編輯:40823237、40832244</p>
+<p>程式模擬:40823221、40823237</p>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
-</div><br />week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+</div>
+<br />week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
