--- a/content/week 5.html
+++ b/content/week 5.html
@@ -142,10 +142,7 @@ img.add_border {
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
-<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:40823250</p>
-<p>網頁編輯:40823237、40832244</p>
-<p>程式模擬:40823221、40823237</p>
+<p><span style="color: #ff0000;"><strong></strong></span></p>
 <br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
         
     <!-- footer -->
