--- a/config/content.htm
+++ b/config/content.htm
@@ -20,11 +20,12 @@
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
+<p><span style="color: #ff0000;"><strong></strong></span></p>
+<h2>week 6</h2>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
 <p>程式模擬:40823221、40823237</p>
-<h2>week 6</h2>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
 </div>
