--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -22,7 +22,7 @@
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <h2>week 6</h2>
-<p><span><strong>小組分工</strong></span></p>
+<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
 <p>程式模擬:40823221、40823237</p>
