--- a/content/week 5.html
+++ b/content/week 5.html
@@ -145,7 +145,8 @@ img.add_border {
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
-<p>程式模擬:40823221、40823237</p><br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
+<p>程式模擬:40823221、40823237</p>
+<br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
         
     <!-- footer -->
       <div class="container">
