--- a/content/小組影片.html
+++ b/content/小組影片.html
@@ -140,7 +140,8 @@ img.add_border {
 <p></p>
 <div id="gtx-trans" style="position: absolute; left: 34px; top: 357.462px;">
 <div class="gtx-trans-icon"></div>
-</div><br />week 6 << <a href='week 6.html'>Previous</a> </div>
+</div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />week 6 << <a href='week 6.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
