--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,8 @@
 <h1>About</h1>
 <p><span>小組倉儲:</span></p>
 <p><a href="https://github.com/40823237/stage2-bg12">https://github.com/40823237/stage2-bg12</a></p>
+<p><a href="https://github.com/40823250/stage2-bg12">https://github.com/40823250/stage2-bg12</a></p>
+<p></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
 <p><a href="https://github.com/40823221/cd2021">40823221 repo</a> / <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
@@ -8,7 +10,8 @@
 <p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
 <div id="gtx-trans" style="position: absolute; left: -5px; top: 55.675px;">
 <div class="gtx-trans-icon"></div>
-</div><h1>小組作業</h1>
+</div>
+<h1>小組作業</h1>
 <p>每周更新小組進度</p>
 <p></p>
 <h2>week 5</h2>
@@ -22,13 +25,16 @@
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
-<p>程式模擬:40823221、40823237</p><h2>week 6</h2>
+<p>程式模擬:40823221、40823237</p>
+<h2>week 6</h2>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
-</div><h1>小組影片</h1>
+</div>
+<h1>小組影片</h1>
 <p></p>
 <p></p>
 <p></p>
 <div id="gtx-trans" style="position: absolute; left: 34px; top: 357.462px;">
 <div class="gtx-trans-icon"></div>
 </div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
