--- a/content/index.html
+++ b/content/index.html
@@ -135,6 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='小組作業.html'>Next</a> >> 小組作業<br /><h1>About</h1>
 <p><span>小組倉儲:</span></p>
+<p><span><a href="https://github.com/40823221/stage2-bg12">https://github.com/40823221/stage2-bg12</a></span></p>
 <p><a href="https://github.com/40823237/stage2-bg12">https://github.com/40823237/stage2-bg12</a></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
@@ -143,8 +144,7 @@ img.add_border {
 <p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
 <div id="gtx-trans" style="position: absolute; left: -5px; top: 55.675px;">
 <div class="gtx-trans-icon"></div>
-</div>
-<br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
+</div><br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
         
     <!-- footer -->
       <div class="container">
