--- a/content/week 7.html
+++ b/content/week 7.html
@@ -134,15 +134,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6<br /><h1>week 5</h1>
-<p><strong><span style="color: #ff0000;">小組討論</span></strong></p>
-<p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
-<p>專題題目:</p>
-<p>第一位組員學號:40823237</p>
-<p>第二位組員學號:40823221</p>
-<p><span>第三位組員學號:</span><span>40823250</span></p>
-<p><span>第四位組員學號:<span>40832244</span></span></p>
-<br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
+    <div id="tipue_search_content">week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 7</h1>
+<p></p>
+<div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
+<div class="gtx-trans-icon"></div>
+</div>
+<br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
