--- a/content/week 6.html
+++ b/content/week 6.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,15 +134,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 6</h1>
+    <div id="tipue_search_content">week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7<br /><h1>week 6</h1>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
 <p>程式模擬:40823221、40823237</p>
-<div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
-<div class="gtx-trans-icon"></div>
-</div>
-<br />week 5 << <a href='week 5.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p></p>
+<br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
         
     <!-- footer -->
       <div class="container">
