--- a/content/小組影片.html
+++ b/content/小組影片.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,15 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week 6 << <a href='week 6.html'>Previous</a> <br /><h1>小組影片</h1>
-<p></p>
+    <div id="tipue_search_content">week 7 << <a href='week 7.html'>Previous</a> <br /><h1>小組影片</h1>
 <p></p>
 <p></p>
 <p></p>
 <div id="gtx-trans" style="position: absolute; left: 34px; top: 357.462px;">
 <div class="gtx-trans-icon"></div>
 </div>
-<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />week 6 << <a href='week 6.html'>Previous</a> </div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div><br />week 7 << <a href='week 7.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
