--- a/content/week 5.html
+++ b/content/week 5.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6-1.html'>week 6-1</a><li><a href='week 6-2.html'>week 6-2</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6<br /><h1>week 5</h1>
+    <div id="tipue_search_content">小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6-1.html'>Next</a> >> week 6-1<br /><h1>week 5</h1>
 <p><strong><span style="color: #ff0000;">小組討論</span></strong></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
 <p>專題題目:</p>
@@ -142,15 +142,8 @@ img.add_border {
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
-<<<<<<< HEAD
-<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:40823250</p>
-<p>網頁編輯:40823237、40832244</p>
-<p>程式模擬:40823221、40823237</p>
-=======
 <p><span style="color: #ff0000;"><strong></strong></span></p>
->>>>>>> 781c314e5467f93793676e5e2893d79a163ff63e
-<br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
+<br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6-1.html'>Next</a> >> week 6-1</div>
         
     <!-- footer -->
       <div class="container">
