--- a/config/content.htm
+++ b/config/content.htm
@@ -28,18 +28,15 @@
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
 <p>程式模擬:40823221、40823237</p>
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 <h2>week 6</h2>
 =======
->>>>>>> 781c314e5467f93793676e5e2893d79a163ff63e
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 781c314e5467f93793676e5e2893d79a163ff63e
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
 </div>
 <h1>小組影片</h1>
-<<<<<<< HEAD
-=======
-<p></p>
->>>>>>> 781c314e5467f93793676e5e2893d79a163ff63e
+<p>week</p>
 <p></p>
 <p></p>
 <p></p>
