--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,8 @@
 <h1>About</h1>
 <p><span>小組倉儲:</span></p>
 <p><a href="https://github.com/40823237/stage2-bg12">https://github.com/40823237/stage2-bg12</a></p>
+<p><a href="https://github.com/40823250/stage2-bg12">https://github.com/40823250/stage2-bg12</a></p>
+<p></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
 <p><a href="https://github.com/40823221/cd2021">40823221 repo</a> / <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
@@ -15,7 +17,7 @@
 <h2>week 5</h2>
 <p><strong><span style="color: #ff0000;">小組討論</span></strong></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
-<p>專題題目:攪拌機</p>
+<p>專題題目:</p>
 <p>第一位組員學號:40823237</p>
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
@@ -25,11 +27,11 @@
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
-<<<<<<< HEAD
-<p>程式模擬:40823221、40823237</p><h2>week 6</h2>
-=======
 <p>程式模擬:40823221、40823237</p>
->>>>>>> 781c314e5467f93793676e5e2893d79a163ff63e
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<h2>week 6</h2>
+=======
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 781c314e5467f93793676e5e2893d79a163ff63e
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
 </div>
@@ -41,3 +43,4 @@
 <div id="gtx-trans" style="position: absolute; left: 34px; top: 357.462px;">
 <div class="gtx-trans-icon"></div>
 </div>
+<div class="eJOY__extension_root_class" id="eJOY__extension_root" style="all: unset;"></div>
