--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,7 +11,8 @@
 <p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
 <div id="gtx-trans" style="position: absolute; left: -5px; top: 55.675px;">
 <div class="gtx-trans-icon"></div>
-</div><h1>小組作業</h1>
+</div>
+<h1>小組作業</h1>
 <p>每周更新小組進度</p>
 <p></p>
 <h2>week 5</h2>
@@ -21,23 +22,24 @@
 <p>第一位組員學號:40823237</p>
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
-<p><span>第四位組員學號:<span>40832244</span></span></p><h2>week 6</h2>
+<p><span>第四位組員學號:<span>40832244</span></span></p>
+<h2>week 6</h2>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823250</p>
 <p>網頁編輯:40823237、40832244</p>
 <p>程式模擬:40823221、40823237</p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-<h2>week 6</h2>
-=======
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 781c314e5467f93793676e5e2893d79a163ff63e
+<p></p>
+<p></p>
+<p></p>
+<h2>week 7</h2>
+<p></p>
+<p></p>
 <div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
 <div class="gtx-trans-icon"></div>
 </div>
 <h1>小組影片</h1>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-=======
 <p></p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 781c314e5467f93793676e5e2893d79a163ff63e
+<p></p>
 <p></p>
 <p></p>
 <p></p>
