--- a/content/week 7.html
+++ b/content/week 7.html
@@ -135,12 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 7</h1>
-<p></p>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
-<div class="gtx-trans-icon"></div>
-</div>
-<br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p>77777</p><br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
