--- a/config/content.htm
+++ b/config/content.htm
@@ -25,19 +25,13 @@
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <h2>week 6</h2>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:40823250</p>
-<p>網頁編輯:40823237、40832244</p>
+<p>繪製圖檔:40823237、40823250</p>
+<p>網頁編輯:40823250、40832244、40823221</p>
 <p>程式模擬:40823221、40823237</p>
 <p></p>
 <p></p>
-<p></p>
-<h2>week 7</h2>
-<p></p>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: -135px; top: 44.5375px;">
-<div class="gtx-trans-icon"></div>
-</div>
-<h1>小組影片</h1>
+<p></p><h2>week 7</h2>
+<p>77777</p><h1>小組影片</h1>
 <p></p>
 <p></p>
 <p></p>
