--- a/content/week 6.html
+++ b/content/week 6.html
@@ -136,13 +136,12 @@ img.add_border {
         </header>
     <div id="tipue_search_content">week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7<br /><h1>week 6</h1>
 <p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:40823250</p>
-<p>網頁編輯:40823237、40832244</p>
+<p>繪製圖檔:40823237、40823250</p>
+<p>網頁編輯:40823250、40832244、40823221</p>
 <p>程式模擬:40823221、40823237</p>
 <p></p>
 <p></p>
-<p></p>
-<br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
+<p></p><br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
         
     <!-- footer -->
       <div class="container">
