--- a/config/content.htm
+++ b/config/content.htm
@@ -39,6 +39,12 @@
 <p>繪圖軟體:Inventor 2020</p>
 <p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
 <p>參考圖:</p>
-<p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p><h1>小組影片</h1>
+<p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p>
+<p><span>完成圖檔:</span></p>
+<p>完成圖:</p>
+<p><img alt="" height="229" src="/images/18.PNG" width="420"/></p>
+<p><img alt="" height="229" src="/images/19.PNG" width="420"/></p>
+<p><span>Inventor模擬影片:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
 <p></p>
 <p></p>
