--- a/content/week 5.html
+++ b/content/week 5.html
@@ -143,7 +143,8 @@ img.add_border {
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <p></p>
-<p><span style="color: #ff0000;"><strong></strong></span></p><br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
+<p><span style="color: #ff0000;"><strong></strong></span></p>
+<br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
         
     <!-- footer -->
       <div class="container">
