--- a/content/week 6.html
+++ b/content/week 6.html
@@ -145,7 +145,8 @@ img.add_border {
 <p>網頁編輯:40823250、40832244、40823221</p>
 <p>程式模擬:40823221、40823237</p>
 <p></p>
-<p></p><br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
+<p></p>
+<br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
         
     <!-- footer -->
       <div class="container">
