--- a/content/小組影片.html
+++ b/content/小組影片.html
@@ -135,8 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week 7 << <a href='week 7.html'>Previous</a> <br /><h1>小組影片</h1>
-<p></p>
-<p></p><br />week 7 << <a href='week 7.html'>Previous</a> </div>
+<p>week7</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><br />week 7 << <a href='week 7.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
