--- a/config/content.htm
+++ b/config/content.htm
@@ -15,39 +15,37 @@
 <h2>week 5</h2>
 <p><strong><span style="color: #ff0000;">小組分組</span></strong></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
-<p></p>
 <p>第一位組員學號:40823237</p>
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <p></p>
+<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
+<p>繪製圖檔:40823237、40823250</p>
+<p>網頁編輯:40823250、40832244、40823221</p>
+<p>程式模擬:40823221、40823237</p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <h2>week 6</h2>
 <p><span style="color: #ff0000;"><strong>小組討論</strong></span></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
 <p>專題題目:自動門<span>開門機構</span></p>
 <p><span>動機:防疫期間，連開門都怕染上5hand廢言，那麼就需要自動門來幫忙</span></p>
+<p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
+<p>參考圖:</p>
+<p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
-<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
-<p>繪製圖檔:40823237、40823250</p>
-<p>網頁編輯:40823250、40832244、40823221</p>
-<p>程式模擬:40823221、40823237</p>
-<p></p>
+<p><span style="color: #ff0000;"><strong></strong></span></p>
 <p></p>
 <h2>week 7</h2>
 <p><span style="color: #ff0000;"><strong>繪製圖檔</strong></span></p>
 <p>繪製主題:自動門<span>開門機構</span></p>
 <p>繪圖人員:<span>40823237、40823250</span></p>
 <p>繪圖軟體:Inventor 2020</p>
-<p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
-<p>參考圖:</p>
-<p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p>
-<p><span>完成圖檔:<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881.iam">下載圖檔</a></span></p>
-<p>完成圖:</p>
+<p>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881.iam">下載</a></span></p>
+<p><span>組合圖:</span></p>
 <p><img alt="" height="229" src="/images/18.PNG" width="420"/></p>
 <p><img alt="" height="229" src="/images/19.PNG" width="420"/></p>
 <p><span>Inventor模擬影片:</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
+<p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
-<h1>小組影片</h1>
-<p></p>
-<p></p>
