--- a/content/week 5.html
+++ b/content/week 5.html
@@ -137,12 +137,15 @@ img.add_border {
     <div id="tipue_search_content">小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6<br /><h1>week 5</h1>
 <p><strong><span style="color: #ff0000;">小組分組</span></strong></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
-<p></p>
 <p>第一位組員學號:40823237</p>
 <p>第二位組員學號:40823221</p>
 <p><span>第三位組員學號:</span><span>40823250</span></p>
 <p><span>第四位組員學號:<span>40832244</span></span></p>
 <p></p>
+<p><span style="color: #ff0000;"><strong>小組分工</strong></span></p>
+<p>繪製圖檔:40823237、40823250</p>
+<p>網頁編輯:40823250、40832244、40823221</p>
+<p>程式模擬:40823221、40823237</p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <br />小組作業 << <a href='小組作業.html'>Previous</a> <a href='week 6.html'>Next</a> >> week 6</div>
         
