--- a/content/week 7.html
+++ b/content/week 7.html
@@ -139,16 +139,12 @@ img.add_border {
 <p>繪製主題:自動門<span>開門機構</span></p>
 <p>繪圖人員:<span>40823237、40823250</span></p>
 <p>繪圖軟體:Inventor 2020</p>
-<p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
-<p>參考圖:</p>
-<p><img alt="" height="315" src="./../images/參考圖.gif" width="420"/></p>
-<p><span>完成圖檔:<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881.iam">下載圖檔</a></span></p>
-<p>完成圖:</p>
+<p>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881.iam">下載</a></span></p>
+<p><span>組合圖:</span></p>
 <p><img alt="" height="229" src="./../images/18.PNG" width="420"/></p>
 <p><img alt="" height="229" src="./../images/19.PNG" width="420"/></p>
 <p><span>Inventor模擬影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
-<br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
