--- a/config/content.htm
+++ b/config/content.htm
@@ -3,13 +3,12 @@
 <p><span><a href="https://github.com/40823221/stage2-bg12">https://github.com/40823221/stage2-bg12</a></span></p>
 <p><a href="https://github.com/40823237/stage2-bg12">https://github.com/40823237/stage2-bg12</a></p>
 <p><a href="https://github.com/40823250/stage2-bg12">https://github.com/40823250/stage2-bg12</a></p>
-<p></p>
+<p><a href="https://github.com/40832244/stage2-bg12">https://github.com/40832244/stage2-bg12</a></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
 <p><a href="https://github.com/40823221/cd2021">40823221 repo</a> / <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a> / <a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
-<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<h1>小組作業</h1>
+<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p><h1>小組作業</h1>
 <p>每周更新小組進度</p>
 <p></p>
 <h2>week 5</h2>
@@ -46,6 +45,23 @@
 <p><img alt="" height="229" src="/images/18.PNG" width="420"/></p>
 <p><img alt="" height="229" src="/images/19.PNG" width="420"/></p>
 <p><span>Inventor模擬影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
+<h2>week 8</h2>
+<p><span style="color: #ff0000;"><strong>程式模擬</strong></span></p>
+<p><span>模擬</span>主題:自動門開門機構</p>
+<p><span>模擬</span>人員:<span>40823221、40823237</span></p>
+<p><span>模擬</span>軟體:<span>CoppeliaSim</span></p>
+<p><span>模擬影片</span><span>:</span></p>
+<p><span>第一次模擬</span></p>
+<p>大部分的連結是可行的，少部分尚需修改</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/43hxbFScnrE" title="YouTube video player" width="560"></iframe></p>
+<p><span>第二次模擬</span></p>
+<p><span>連結已完成，但結構上出現問題，主動軸轉向錯誤</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5vKIvkMsucs" title="YouTube video player" width="560"></iframe></p>
+<p><span>第三次模擬</span></p>
+<p>主動軸轉向問題解決，結構仍有問題，推側是零件尺寸的取捨有問題</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
 <p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
+<p>week8</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/43hxbFScnrE" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5vKIvkMsucs" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
