--- a/content/week 7.html
+++ b/content/week 7.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='小組作業.html'>小組作業</a><ul class='dropdown'><li><a href='week 5.html'>week 5</a><li><a href='week 6.html'>week 6</a><li><a href='week 7.html'>week 7</a><li><a href='week 8.html'>week 8</a></li></ul><li><a href='小組影片.html'>小組影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 7</h1>
+    <div id="tipue_search_content">week 6 << <a href='week 6.html'>Previous</a> <a href='week 8.html'>Next</a> >> week 8<br /><h1>week 7</h1>
 <p><span style="color: #ff0000;"><strong>繪製圖檔</strong></span></p>
 <p>繪製主題:自動門<span>開門機構</span></p>
 <p>繪圖人員:<span>40823237、40823250</span></p>
@@ -144,7 +144,8 @@ img.add_border {
 <p><img alt="" height="229" src="./../images/18.PNG" width="420"/></p>
 <p><img alt="" height="229" src="./../images/19.PNG" width="420"/></p>
 <p><span>Inventor模擬影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p><br />week 6 << <a href='week 6.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
+<br />week 6 << <a href='week 6.html'>Previous</a> <a href='week 8.html'>Next</a> >> week 8</div>
         
     <!-- footer -->
       <div class="container">
