--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -47,7 +47,7 @@
 <p><span>Inventor模擬影片:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <h2>week 8</h2>
-<p><span>程式模擬</span></p>
+<p><span style="color: #ff0000;"><strong>程式模擬</strong></span></p>
 <p><span>模擬</span>主題:自動門開門機構</p>
 <p><span>模擬</span>人員:<span>40823221、40823237</span></p>
 <p><span>模擬</span>軟體:<span>CoppeliaSim</span></p>
