--- a/content/week 8.html
+++ b/content/week 8.html
@@ -140,14 +140,14 @@ img.add_border {
 <p><span>模擬</span>人員:<span>40823221、40823237</span></p>
 <p><span>模擬</span>軟體:<span>CoppeliaSim</span></p>
 <p><span>模擬影片</span><span>:</span></p>
-<p><span>第一次模擬</span></p>
+<p><span>第一次模擬 (<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/1.ttt">模擬檔下載</a>)</span></p>
 <p>大部分的連結是可行的，少部分尚需修改</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/43hxbFScnrE" title="YouTube video player" width="560"></iframe></p>
-<p><span>第二次模擬</span></p>
+<p><span>第二次模擬 (<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/2.ttt">模擬檔下載</a><span>)</span></span></p>
 <p><span>連結已完成，但結構上出現問題，主動軸轉向錯誤</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5vKIvkMsucs" title="YouTube video player" width="560"></iframe></p>
-<p><span>第三次模擬</span></p>
-<p>主動軸轉向問題解決，結構仍有問題，推側是零件尺寸的取捨有問題</p>
+<p><span>第三次模擬 <span>(</span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a><span>)</span></span></p>
+<p>主動軸轉向問題已解決，結構仍有問題，推測是零件尺寸的取捨有問題</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p><br />week 7 << <a href='week 7.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
