--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -46,7 +46,11 @@
 <p><img alt="" height="229" src="/images/19.PNG" width="420"/></p>
 <p><span>Inventor模擬影片:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
-<h2>week 8</h2>
+<p><span style="color: #ff0000;"><em>因模擬考量到零件配合問題，所以更改部分零件尺寸，以下為更新後的圖檔</em></span></p>
+<p><span>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
+<p><span>組合圖(改):</span></p>
+<p><img alt="" height="250" src="/images/20.PNG" width="420"/></p>
+<p><span><img alt="" height="229" src="/images/21.PNG" width="420"/></span></p><h2>week 8</h2>
 <p><span style="color: #ff0000;"><strong>程式模擬</strong></span></p>
 <p><span>模擬</span>主題:自動門開門機構</p>
 <p><span>模擬</span>人員:<span>40823221、40823237</span></p>
@@ -61,9 +65,9 @@
 <p><span>第三次模擬 <span>(</span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a><span>)</span></span></p>
 <p>主動軸轉向問題已解決，結構仍有問題，推測是零件尺寸的取捨有問題</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
-<p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a>)</span></p>
-<p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題</p>
-<h2>week 9</h2>
+<p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/422.ttt">模擬檔下載</a>)</span></p>
+<p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題，不過門打開的角度有變大</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p><h2>week 9</h2>
 <p><span><strong>小組分工</strong></span></p>
 <p>繪製圖檔:40823237、40823250</p>
 <p>網頁編輯:40823250、40832244、40823221</p>
@@ -71,9 +75,10 @@
 <p><span>PDF:</span><a href="https://40823237.github.io/stage1-bg16/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>Reveal:</span><a href="https://40823237.github.io/stage2-bg12/reveal/index.html">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>報告影片:</span></p>
-<p><span></span></p>
-<p><span></span></p><h1>小組影片</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
 <p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p>week8</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/43hxbFScnrE" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5vKIvkMsucs" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
+<p>week9</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
