--- a/content/week 7.html
+++ b/content/week 7.html
@@ -146,7 +146,7 @@ img.add_border {
 <p><span>Inventor模擬影片:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p><span style="color: #ff0000;"><em>因模擬考量到零件配合問題，所以更改部分零件尺寸，以下為更新後的圖檔</em></span></p>
-<p><span>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881.iam">下載</a></span></span></p>
+<p><span>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
 <p><span>組合圖(改):</span></p>
 <p><img alt="" height="250" src="./../images/20.PNG" width="420"/></p>
 <p><span><img alt="" height="229" src="./../images/21.PNG" width="420"/></span></p><br />week 6 << <a href='week 6.html'>Previous</a> <a href='week 8.html'>Next</a> >> week 8</div>
