--- a/content/week 8.html
+++ b/content/week 8.html
@@ -149,9 +149,9 @@ img.add_border {
 <p><span>第三次模擬 <span>(</span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a><span>)</span></span></p>
 <p>主動軸轉向問題已解決，結構仍有問題，推測是零件尺寸的取捨有問題</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
-<p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3.ttt">模擬檔下載</a>)</span></p>
-<p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題</p>
-<br />week 7 << <a href='week 7.html'>Previous</a> <a href='week 9.html'>Next</a> >> week 9</div>
+<p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/422.ttt">模擬檔下載</a>)</span></p>
+<p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題，不過門打開的角度有變大</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p><br />week 7 << <a href='week 7.html'>Previous</a> <a href='week 9.html'>Next</a> >> week 9</div>
         
     <!-- footer -->
       <div class="container">
