--- a/content/week 9.html
+++ b/content/week 9.html
@@ -135,15 +135,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 9</h1>
-<p><span><strong>小組分工</strong></span></p>
+<p><span style="color: #ff0000;"><strong>報告</strong></span></p>
+<p>小組分工</p>
 <p>繪製圖檔:40823237、40823250</p>
 <p>網頁編輯:40823250、40832244、40823221</p>
 <p>程式模擬:40823221、40823237</p>
 <p><span>PDF:</span><a href="https://40823237.github.io/stage1-bg16/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>Reveal:</span><a href="https://40823237.github.io/stage2-bg12/reveal/index.html">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>報告影片:</span></p>
-<p><span></span></p>
-<p><span></span></p><br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p><br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
