--- a/config/content.htm
+++ b/config/content.htm
@@ -28,14 +28,13 @@
 <p><span style="color: #ff0000;"><strong>小組討論</strong></span></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
 <p>專題題目:自動門<span>開門機構</span></p>
-<p><span>動機:防疫期間，連開門都怕染上5hand廢言，那麼就需要自動門來幫忙</span></p>
+<p><span>動機:防疫期間，連開門都怕染上五hand廢言，那麼就需要自動門來幫忙</span></p>
 <p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
 <p>參考圖:</p>
 <p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
-<p></p>
-<h2>week 7</h2>
+<p></p><h2>week 7</h2>
 <p><span style="color: #ff0000;"><strong>繪製圖檔</strong></span></p>
 <p>繪製主題:自動門<span>開門機構</span></p>
 <p>繪圖人員:<span>40823237、40823250</span></p>
@@ -47,7 +46,7 @@
 <p><span>Inventor模擬影片:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p><span style="color: #ff0000;"><em>因模擬考量到零件配合問題，所以更改部分零件尺寸，以下為更新後的圖檔</em></span></p>
-<p><span>組合圖檔:<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
+<p><span>組合圖檔(改):<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
 <p><span>組合圖(改):</span></p>
 <p><img alt="" height="250" src="/images/20.PNG" width="420"/></p>
 <p><span><img alt="" height="229" src="/images/21.PNG" width="420"/></span></p><h2>week 8</h2>
@@ -69,14 +68,18 @@
 <p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題，不過門打開的角度有變大</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p><h2>week 9</h2>
 <p><span style="color: #ff0000;"><strong>報告</strong></span></p>
-<p>小組分工</p>
-<p>繪製圖檔:40823237、40823250</p>
-<p>網頁編輯:40823250、40832244、40823221</p>
-<p>程式模擬:40823221、40823237</p>
-<p><span>PDF:</span><a href="https://40823237.github.io/stage1-bg16/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
+<p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
+<p>第一位組員學號:40823237</p>
+<p>第二位組員學號:40823221</p>
+<p><span>第三位組員學號:</span><span>40823250</span></p>
+<p><span>第四位組員學號:<span>40832244</span></span></p>
+<p><span>PDF:</span><a href="https://40823237.github.io/stage2-bg12/downloads/協同報告stage2.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>Reveal:</span><a href="https://40823237.github.io/stage2-bg12/reveal/index.html">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>報告影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: -16px; top: 47.175px;">
+<div class="gtx-trans-icon"></div>
+</div><h1>小組影片</h1>
 <p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p>week8</p>
