--- a/content/week 9.html
+++ b/content/week 9.html
@@ -136,14 +136,18 @@ img.add_border {
         </header>
     <div id="tipue_search_content">week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片<br /><h1>week 9</h1>
 <p><span style="color: #ff0000;"><strong>報告</strong></span></p>
-<p>小組分工</p>
-<p>繪製圖檔:40823237、40823250</p>
-<p>網頁編輯:40823250、40832244、40823221</p>
-<p>程式模擬:40823221、40823237</p>
-<p><span>PDF:</span><a href="https://40823237.github.io/stage1-bg16/downloads/%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
+<p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
+<p>第一位組員學號:40823237</p>
+<p>第二位組員學號:40823221</p>
+<p><span>第三位組員學號:</span><span>40823250</span></p>
+<p><span>第四位組員學號:<span>40832244</span></span></p>
+<p><span>PDF:</span><a href="https://40823237.github.io/stage2-bg12/downloads/協同報告stage2.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>Reveal:</span><a href="https://40823237.github.io/stage2-bg12/reveal/index.html">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>報告影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p><br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: -16px; top: 47.175px;">
+<div class="gtx-trans-icon"></div>
+</div><br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
