--- a/reveal/index.html
+++ b/reveal/index.html
@@ -149,7 +149,7 @@
         <section>
            <h3>報告PDF</h3>
            <p>
-                <h4> <a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw </a> 
+                <h4> <a href="https://40823237.github.io/stage2-bg12/downloads/協同報告stage2.pdf">stage2-bg12 協同報告</a> 
             </p>
         </section>
         </section>
