--- a/content/week 6.html
+++ b/content/week 6.html
@@ -138,14 +138,13 @@ img.add_border {
 <p><span style="color: #ff0000;"><strong>小組討論</strong></span></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
 <p>專題題目:自動門<span>開門機構</span></p>
-<p><span>動機:防疫期間，連開門都怕染上5hand廢言，那麼就需要自動門來幫忙</span></p>
+<p><span>動機:防疫期間，連開門都怕染上五hand廢言，那麼就需要自動門來幫忙</span></p>
 <p>參考網址:<a href="https://www.xuehua.us/a/5ec2940e5b4929f59adb830c?lang=zh-tw">開門機構</a></p>
 <p>參考圖:</p>
 <p><img alt="" height="315" src="./../images/參考圖.gif" width="420"/></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
-<p></p>
-<br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
+<p></p><br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
         
     <!-- footer -->
       <div class="container">
