--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -68,14 +68,18 @@
 <p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題，不過門打開的角度有變大</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p><h2>week 9</h2>
 <p><span style="color: #ff0000;"><strong>報告</strong></span></p>
-<p>小組分工</p>
-<p>繪製圖檔:40823237、40823250</p>
-<p>網頁編輯:40823250、40832244、40823221</p>
-<p>程式模擬:40823221、40823237</p>
+<p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
+<p>第一位組員學號:40823237</p>
+<p>第二位組員學號:40823221</p>
+<p><span>第三位組員學號:</span><span>40823250</span></p>
+<p><span>第四位組員學號:<span>40832244</span></span></p>
 <p><span>PDF:</span><a href="https://40823237.github.io/stage2-bg12/downloads/協同報告stage2.pdf">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>Reveal:</span><a href="https://40823237.github.io/stage2-bg12/reveal/index.html">2021-協同產品設計實習-stage2-bg12</a></p>
 <p><span>報告影片:</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p><h1>小組影片</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: -16px; top: 47.175px;">
+<div class="gtx-trans-icon"></div>
+</div><h1>小組影片</h1>
 <p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p>week8</p>
