--- a/content/index.html
+++ b/content/index.html
@@ -141,9 +141,10 @@ img.add_border {
 <p><a href="https://github.com/40832244/stage2-bg12">https://github.com/40832244/stage2-bg12</a></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
-<p><a href="https://github.com/40823221/cd2021">40823221 repo</a> / <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
+<p><a href="https://github.com/40823221/cd2021">40823221 repo </a>/ <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a> / <a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
-<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p><br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
+<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
+<br /> <a href='小組作業.html'>Next</a> >> 小組作業</div>
         
     <!-- footer -->
       <div class="container">
