--- a/content/week 6.html
+++ b/content/week 6.html
@@ -144,7 +144,8 @@ img.add_border {
 <p><img alt="" height="315" src="./../images/參考圖.gif" width="420"/></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
-<p></p><br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
+<p></p>
+<br />week 5 << <a href='week 5.html'>Previous</a> <a href='week 7.html'>Next</a> >> week 7</div>
         
     <!-- footer -->
       <div class="container">
