--- a/content/week 7.html
+++ b/content/week 7.html
@@ -149,7 +149,8 @@ img.add_border {
 <p><span>組合圖檔(改):<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
 <p><span>組合圖(改):</span></p>
 <p><img alt="" height="250" src="./../images/20.PNG" width="420"/></p>
-<p><span><img alt="" height="229" src="./../images/21.PNG" width="420"/></span></p><br />week 6 << <a href='week 6.html'>Previous</a> <a href='week 8.html'>Next</a> >> week 8</div>
+<p><span><img alt="" height="229" src="./../images/21.PNG" width="420"/></span></p>
+<br />week 6 << <a href='week 6.html'>Previous</a> <a href='week 8.html'>Next</a> >> week 8</div>
         
     <!-- footer -->
       <div class="container">
