--- a/content/week 9.html
+++ b/content/week 9.html
@@ -147,7 +147,8 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
 <div id="gtx-trans" style="position: absolute; left: -16px; top: 47.175px;">
 <div class="gtx-trans-icon"></div>
-</div><br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
+</div>
+<br />week 8 << <a href='week 8.html'>Previous</a> <a href='小組影片.html'>Next</a> >> 小組影片</div>
         
     <!-- footer -->
       <div class="container">
