--- a/config/content.htm
+++ b/config/content.htm
@@ -6,9 +6,10 @@
 <p><a href="https://github.com/40832244/stage2-bg12">https://github.com/40832244/stage2-bg12</a></p>
 <p><span>小組成員:</span></p>
 <p><span><a href="https://github.com/40823237/cd2021">40823237 repo</a> / <a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></span></p>
-<p><a href="https://github.com/40823221/cd2021">40823221 repo</a> / <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
+<p><a href="https://github.com/40823221/cd2021">40823221 repo </a>/ <a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a> / <a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
-<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p><h1>小組作業</h1>
+<p><a href="https://github.com/40832244/cd2021"> 40832244 repo</a> / <a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
+<h1>小組作業</h1>
 <p>每周更新小組進度</p>
 <p></p>
 <h2>week 5</h2>
@@ -34,7 +35,8 @@
 <p><img alt="" height="315" src="/images/參考圖.gif" width="420"/></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
 <p><span style="color: #ff0000;"><strong></strong></span></p>
-<p></p><h2>week 7</h2>
+<p></p>
+<h2>week 7</h2>
 <p><span style="color: #ff0000;"><strong>繪製圖檔</strong></span></p>
 <p>繪製主題:自動門<span>開門機構</span></p>
 <p>繪圖人員:<span>40823237、40823250</span></p>
@@ -49,7 +51,8 @@
 <p><span>組合圖檔(改):<span><a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/3%E7%B5%84%E5%90%881(%E6%94%B9).iam">下載</a></span></span></p>
 <p><span>組合圖(改):</span></p>
 <p><img alt="" height="250" src="/images/20.PNG" width="420"/></p>
-<p><span><img alt="" height="229" src="/images/21.PNG" width="420"/></span></p><h2>week 8</h2>
+<p><span><img alt="" height="229" src="/images/21.PNG" width="420"/></span></p>
+<h2>week 8</h2>
 <p><span style="color: #ff0000;"><strong>程式模擬</strong></span></p>
 <p><span>模擬</span>主題:自動門開門機構</p>
 <p><span>模擬</span>人員:<span>40823221、40823237</span></p>
@@ -66,7 +69,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/yHeHPjqGMQ4" title="YouTube video player" width="560"></iframe></p>
 <p><span>第四次模擬(<a href="https://github.com/40823237/stage2-bg12/raw/main/downloads/422.ttt">模擬檔下載</a>)</span></p>
 <p>改圖過後，以為是活塞配合有誤，但應該還是結構安排有問題，不過門打開的角度有變大</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p><h2>week 9</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B2ywwONCkkI" title="YouTube video player" width="560"></iframe></p>
+<h2>week 9</h2>
 <p><span style="color: #ff0000;"><strong>報告</strong></span></p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage2-bg12</span></p>
 <p>第一位組員學號:40823237</p>
@@ -79,7 +83,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/4_kNGJ5GcyM" title="YouTube video player" width="560"></iframe></p>
 <div id="gtx-trans" style="position: absolute; left: -16px; top: 47.175px;">
 <div class="gtx-trans-icon"></div>
-</div><h1>小組影片</h1>
+</div>
+<h1>小組影片</h1>
 <p>week7</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/V9J78fQPsg8" title="YouTube video player" width="560"></iframe></p>
 <p>week8</p>
